# frontier-zig

./: .gitignore  BUG-REPORT.md  README.md  flake.nix  justfile
.github/workflows/: ci.yml
assets/: README.md  test.html
bun/: README.md
docs/: chrome.md
plans/: TODO.md  cmd-k-bug-repro.md  demo.md  phase2-summary.md  zig-vs-rust-keyboard-handling.md
rust/: Cargo.toml  README.md
rust/examples/: modal_demo.rs
rust/src/: lib.rs
rust/tests/: keyboard_test.rs
scripts/: ci.sh  screenshot_app.sh  test_cmd_k.sh  test_modal_demo.sh  test_navigation.sh
zig/: build.zig
zig/src/: command_palette.zig  main.zig  navigation.zig  shortcuts.zig
